--- a/app/scss/base/mixins.scss
+++ b/app/scss/base/mixins.scss
@@ -72,7 +72,7 @@
 @mixin formelementst-custom-style {
   @include text;
 
-  border-bottom: 1px solid $thirdDark;
+  border-bottom: 1px solid $forthGray;
 }
 
 @mixin flip {
