--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -408,8 +408,8 @@ textarea {
  */
 
 ::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.54;
+  color: #8B8B8B;
+  opacity: 1;
 }
 
 /**
