--- a/app/scss/modules/solutions.scss
+++ b/app/scss/modules/solutions.scss
@@ -10,7 +10,6 @@ $listItemMargin: 10px;
     font-family: $main-ff-bold;
     font-size: 48px;
     line-height: 72px;
-    padding-top: 30px;
   }
 
   &-grid {
@@ -18,55 +17,55 @@ $listItemMargin: 10px;
     flex-wrap: wrap;
 
     &-item {
-      height: 279px;
-      width: 308px;
+      height: 295px;
+      width: 329px;
       padding: 90px 70px 0;
       margin: 0.5px;
       background-color: $lightGray;
 
       // Icons
-      &:nth-child(2) .solutions-grid-item__caption::before{
+      &:nth-child(2) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/condition-monitoring.svg);
       }
-      &:nth-child(3) .solutions-grid-item__caption::before{
+      &:nth-child(3) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/sensor-data-processing.svg);
       }
-      &:nth-child(4) .solutions-grid-item__caption::before{
+      &:nth-child(4) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/smart-hvac.svg);
       }
-      &:nth-child(5) .solutions-grid-item__caption::before{
+      &:nth-child(5) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/machine-learning.svg);
       }
-      &:nth-child(6) .solutions-grid-item__caption::before{
+      &:nth-child(6) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/embedded-development.svg);
       }
-      &:nth-child(7) .solutions-grid-item__caption::before{
+      &:nth-child(7) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/data-processing.svg);
       }
-      &:nth-child(8) .solutions-grid-item__caption::before{
+      &:nth-child(8) .solutions-grid-item__caption::before {
         content: url(../../images/solutions/blue/visualisations.svg);
       }
 
       // Hover
-      &:nth-child(2):hover .solutions-grid-item__caption::before{
+      &:nth-child(2):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/condition-monitoring.svg);
       }
-      &:nth-child(3):hover .solutions-grid-item__caption::before{
+      &:nth-child(3):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/sensor-data-processing.svg);
       }
-      &:nth-child(4):hover .solutions-grid-item__caption::before{
+      &:nth-child(4):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/smart-hvac.svg);
       }
-      &:nth-child(5):hover .solutions-grid-item__caption::before{
+      &:nth-child(5):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/machine-learning.svg);
       }
-      &:nth-child(6):hover .solutions-grid-item__caption::before{
+      &:nth-child(6):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/embedded-development.svg);
       }
-      &:nth-child(7):hover .solutions-grid-item__caption::before{
+      &:nth-child(7):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/data-processing.svg);
       }
-      &:nth-child(8):hover .solutions-grid-item__caption::before{
+      &:nth-child(8):hover .solutions-grid-item__caption::before {
         content: url(../../images/solutions/white/visualisations.svg);
       }
 
@@ -78,6 +77,10 @@ $listItemMargin: 10px;
         line-height: 24px;
         color: $mainBlue;
         text-transform: uppercase;
+
+        span {
+          display: block;
+        }
 
         &:before {
           content: url(../../images/solutions/blue/predictive-maintenance.svg);
@@ -94,6 +97,10 @@ $listItemMargin: 10px;
         font-size: 16px;
         line-height: 24px;
         color: $secondGray;
+
+        span {
+          display: block;
+        }
       }
 
       &__link {
@@ -104,7 +111,7 @@ $listItemMargin: 10px;
         background-color: $mainBlue;
         cursor: pointer;
       }
-      
+
       .blue-link {
         color: #fff;
         &::before {
