--- a/app/scss/var.scss
+++ b/app/scss/var.scss
@@ -10,6 +10,7 @@ $thirdDark: #4E4E4E;
 $mainGray: #696969;
 $secondGray: #8B8B8B;
 $textGray: #909090;
+$forthGray: #BFBFBF;
 $lightGray: #DEDEDE;
 $whiteGray: #EDF1FA;
 
