--- a/app/scss/base/fonts.scss
+++ b/app/scss/base/fonts.scss
@@ -1,10 +1,6 @@
 @font-face {
     font-family: 'Poppins-Regular';
-    src: url('../../fonts/Poppins/poppins-regular-webfont.eot');
-    src: url('../../fonts/Poppins/poppins-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Poppins/poppins-regular-webfont.woff') format('woff'),
-    url('../../fonts/Poppins/poppins-regular-webfont.woff2') format('woff2'),
-    url('../../fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+    src: url('../../fonts/Poppins/Poppins-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
