--- a/app/scss/modules/slider.scss
+++ b/app/scss/modules/slider.scss
@@ -80,10 +80,15 @@
   .glide__slide {
     display: flex;
     justify-content: space-between;
+    min-height: 330px;
 
     @include lg {
       flex-direction: column;
       align-items: center;
+    }
+
+    @include sm {
+      padding-right: 24px;
     }
   }
 
