--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1254,40 +1254,44 @@ main {
     .solutions-grid-box {
       display: flex;
       flex-wrap: nowrap; }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(1) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/predictive-maintenance.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(2) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/condition-monitoring.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(3) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/sensor-data-processing.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(4) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/smart-hvac.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(1):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/predictive-maintenance.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(2):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/condition-monitoring.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(3):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/sensor-data-processing.svg); }
+      .solutions-grid-box-1 .solutions-grid-item:nth-child(4):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/smart-hvac.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(1) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/machine-learning.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(2) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/embedded-development.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(3) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/data-processing.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(4) .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/blue/visualisations.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(1):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/machine-learning.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(2):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/embedded-development.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(3):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/data-processing.svg); }
+      .solutions-grid-box-2 .solutions-grid-item:nth-child(4):hover .solutions-grid-item__caption::before {
+        content: url(../../images/solutions/white/visualisations.svg); }
     .solutions-grid-item {
       height: 295px;
       min-width: 329px;
       padding: 90px 70px 0;
       margin: 0.5px;
       background-color: #DEDEDE; }
-      .solutions-grid-item:nth-child(2) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/condition-monitoring.svg); }
-      .solutions-grid-item:nth-child(3) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/sensor-data-processing.svg); }
-      .solutions-grid-item:nth-child(4) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/smart-hvac.svg); }
-      .solutions-grid-item:nth-child(5) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/machine-learning.svg); }
-      .solutions-grid-item:nth-child(6) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/embedded-development.svg); }
-      .solutions-grid-item:nth-child(7) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/data-processing.svg); }
-      .solutions-grid-item:nth-child(8) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/visualisations.svg); }
-      .solutions-grid-item:nth-child(2):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/condition-monitoring.svg); }
-      .solutions-grid-item:nth-child(3):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/sensor-data-processing.svg); }
-      .solutions-grid-item:nth-child(4):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/smart-hvac.svg); }
-      .solutions-grid-item:nth-child(5):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/machine-learning.svg); }
-      .solutions-grid-item:nth-child(6):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/embedded-development.svg); }
-      .solutions-grid-item:nth-child(7):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/data-processing.svg); }
-      .solutions-grid-item:nth-child(8):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/visualisations.svg); }
       .solutions-grid-item__caption {
         position: relative;
         margin-bottom: 15px;
@@ -1329,8 +1333,6 @@ main {
         display: block; }
       .solutions-grid-item:hover .solutions-grid-item__caption {
         color: #fff; }
-        .solutions-grid-item:hover .solutions-grid-item__caption:before {
-          content: url(../../images/solutions/white/predictive-maintenance.svg); }
       .solutions-grid-item:hover .solutions-grid-item__text {
         color: #fff; }
 
@@ -1378,13 +1380,13 @@ main {
           height: auto;
           max-width: 312px; } }
       .technology-grid-item:nth-child(2) .technology-grid-item__caption::before {
-        background-image: url(../../images/Icon/Database.svg); }
+        background-image: url(../../images/Icon/Сircle.svg); }
       .technology-grid-item:nth-child(3) .technology-grid-item__caption::before {
-        background-image: url(../../images/Icon/Cube.svg); }
+        background-image: url(../../images/Icon/Database.svg); }
       .technology-grid-item:nth-child(4) .technology-grid-item__caption::before {
-        background-image: url(../../images/Icon/Eye.svg); }
+        background-image: url(../../images/Icon/Cube.svg); }
       .technology-grid-item:nth-child(5) .technology-grid-item__caption::before {
-        background-image: url(../../images/technology/Processor.svg); }
+        background-image: url(../../images/Icon/Eye.svg); }
       .technology-grid-item__caption {
         position: relative;
         font-size: 16px;
@@ -1393,7 +1395,7 @@ main {
         color: #fff;
         text-transform: uppercase; }
         .technology-grid-item__caption:before {
-          background-image: url(../../images/Icon/Сircle.svg);
+          background-image: url(../../images/technology/Processor.svg);
           background-size: 20px;
           content: "";
           height: 20px;
