--- a/app/scss/modules/solutions.scss
+++ b/app/scss/modules/solutions.scss
@@ -25,6 +25,70 @@ $listItemMargin: 10px;
     &-box {
       display: flex;
       flex-wrap: nowrap;
+
+      &-1 {
+        .solutions-grid-item {
+          // Icons
+          &:nth-child(1) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/predictive-maintenance.svg);
+          }
+          &:nth-child(2) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/condition-monitoring.svg);
+          }
+          &:nth-child(3) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/sensor-data-processing.svg);
+          }
+          &:nth-child(4) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/smart-hvac.svg);
+          }
+
+          // Hover
+          &:nth-child(1):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/predictive-maintenance.svg);
+          }
+          &:nth-child(2):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/condition-monitoring.svg);
+          }
+          &:nth-child(3):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/sensor-data-processing.svg);
+          }
+          &:nth-child(4):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/smart-hvac.svg);
+          }
+        }
+      }
+
+      &-2 {
+        .solutions-grid-item {
+          // Icons
+          &:nth-child(1) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/machine-learning.svg);
+          }
+          &:nth-child(2) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/embedded-development.svg);
+          }
+          &:nth-child(3) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/data-processing.svg);
+          }
+          &:nth-child(4) .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/blue/visualisations.svg);
+          }
+
+          // Hover
+          &:nth-child(1):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/machine-learning.svg);
+          }
+          &:nth-child(2):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/embedded-development.svg);
+          }
+          &:nth-child(3):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/data-processing.svg);
+          }
+          &:nth-child(4):hover .solutions-grid-item__caption::before {
+            content: url(../../images/solutions/white/visualisations.svg);
+          }
+        }
+      }
     }
 
     &-item {
@@ -33,52 +97,6 @@ $listItemMargin: 10px;
       padding: 90px 70px 0;
       margin: 0.5px;
       background-color: $lightGray;
-
-      // Icons
-      &:nth-child(2) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/condition-monitoring.svg);
-      }
-      &:nth-child(3) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/sensor-data-processing.svg);
-      }
-      &:nth-child(4) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/smart-hvac.svg);
-      }
-      &:nth-child(5) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/machine-learning.svg);
-      }
-      &:nth-child(6) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/embedded-development.svg);
-      }
-      &:nth-child(7) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/data-processing.svg);
-      }
-      &:nth-child(8) .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/blue/visualisations.svg);
-      }
-
-      // Hover
-      &:nth-child(2):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/condition-monitoring.svg);
-      }
-      &:nth-child(3):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/sensor-data-processing.svg);
-      }
-      &:nth-child(4):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/smart-hvac.svg);
-      }
-      &:nth-child(5):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/machine-learning.svg);
-      }
-      &:nth-child(6):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/embedded-development.svg);
-      }
-      &:nth-child(7):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/data-processing.svg);
-      }
-      &:nth-child(8):hover .solutions-grid-item__caption::before {
-        content: url(../../images/solutions/white/visualisations.svg);
-      }
 
       &__caption {
         position: relative;
@@ -145,9 +163,9 @@ $listItemMargin: 10px;
       &:hover .solutions-grid-item__caption {
         color: #fff;
 
-        &:before {
-          content: url(../../images/solutions/white/predictive-maintenance.svg);
-        }
+        // &:before {
+        //   content: url(../../images/solutions/white/predictive-maintenance.svg);
+        // }
       }
 
       &:hover .solutions-grid-item__text {
